Fix gaps in tags--vertical
* Make vertical gaps between tags_item via margin-bottom.
* Remove padding-right from tags_item in tags--vertical.
* Decrease line-height of tags_item.

--- a/src/scss/blocks/_tags.scss
+++ b/src/scss/blocks/_tags.scss
@@ -5,6 +5,13 @@
 
 	&.tags--vertical {
 		flex-direction: column;
+
+		.tags_item {
+			&:not(:last-child) {
+				padding-right: 0;
+				margin-bottom: 1rem;
+			}
+		}
 	}
 }
 
@@ -18,7 +25,6 @@
 	display: block;
 
 	font-weight: 500;
-	line-height: 3rem;
 	text-transform: uppercase;
 	letter-spacing: math.div(58em, 1000);
 }
